# fastapi-dual-socket

./: Makefile  README.md  gunicorn.conf.py  main.py  pyproject.toml  start-production.sh  test-production.py
.claude/: settings.local.json
src/: admin_service.py  database.py  dual_server.py  local_api.py  production.py  public_api.py  server.py  shared.py
