[project]
name = "fastapi-dual-socket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.35.0",
    "gunicorn>=22.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "requests>=2.31.0",
]
