[project]
name = "fastapi-dual-socket"
version = "0.1.0"
description = "FastAPI dual socket demo with production-ready Gunicorn deployment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[project.scripts]
server = "src.server:main"
